<resources>
    <string name="app_name">MiniProject</string>
    <string name="expand_feature">Expand feature</string>
    <string name="login_button">Login button</string>
    <string name="cart_button">Cart button</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="back">Back</string>
    <string name="selected_items">Selected Items</string>
    <string name="_0">$0</string>
    <string name="checkout">Checkout</string>
</resources>