<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_login"
            android:contentDescription="@string/login_button"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_person_24" />

        <ImageButton
            android:id="@+id/cart_button"
            android:layout_width="48dp"
            android:layout_height="51dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/background_app"
            android:contentDescription="@string/cart_button"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/searchView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/searchView"
            app:layout_constraintTop_toTopOf="@+id/searchView"
            app:srcCompat="@drawable/baseline_shopping_cart_24" />

        <ImageButton
            android:id="@+id/drop_list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:background="@color/background_app"
            android:contentDescription="@string/expand_feature"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_list_24" />

        <android.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="300dp"
            android:layout_height="51dp"
            android:layout_marginTop="120dp"

            android:background="@drawable/rounded_search"
            android:elevation="2dp"
            android:iconifiedByDefault="false"
            android:queryBackground="@android:color/transparent"
            android:queryHint="Search"
            app:layout_constraintEnd_toStartOf="@+id/login_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/heading1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/poppins_bold"
            android:text="Explore"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/heading1"
            app:layout_constraintTop_toBottomOf="@+id/heading1" />

        <TextView
            android:id="@+id/heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/poppins_bold"
            android:text="Best selling"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_items" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_marginStart="16dp"

            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_background_items"
            android:padding="10dp"
            android:theme="@style/Theme.Material3.Light.NoActionBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/heading2"
            app:layout_constraintTop_toBottomOf="@+id/heading2"
            app:layout_constraintVertical_bias="0.0">

            <androidx.cardview.widget.CardView
                android:id="@+id/pics_layout"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/barrelchair"
                    tools:layout_editor_absoluteX="84dp"
                    tools:layout_editor_absoluteY="446dp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/itemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@id/pics_layout"
                android:fontFamily="@font/poppins_bold"
                android:text="Item Name" />

            <TextView
                android:id="@+id/short_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemName"
                android:layout_marginStart="25dp"
                android:layout_toEndOf="@id/pics_layout"
                android:fontFamily="@font/poppins_regular"
                android:text="Description"
                android:textColor="#C0BEC7" />

            <TextView
                android:id="@+id/currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/short_description"
                android:layout_marginStart="25dp"
                android:layout_toEndOf="@id/pics_layout"
                android:fontFamily="@font/poppins_regular"
                android:text="$250.00" />

            <ImageButton
                android:id="@+id/add_to_cart_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_below="@id/short_description"
                android:layout_alignParentEnd="true"
                android:background="@drawable/rounded_login"
                android:contentDescription="@string/add_to_cart"
                android:padding="5dp"
                app:srcCompat="@drawable/baseline_arrow_forward_24" />

        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>